# orchestration-ctmkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  refresh-docs.yml
scripts/: refresh-docs.sh
src/ctmkit/: __init__.py  cli.py  config.py  naming.py  schema.py  validate.py
src/ctmkit/aapi/: __init__.py  _summary.py  build.py  deploy.py  models.py  session.py  transform.py
src/ctmkit/approval/: __init__.py  policy.py  registry.py
src/ctmkit/cli/: __init__.py  _console.py  _context.py  approval.py  audit.py  build.py  deploy.py  docs.py  events.py  manifests.py  mcp.py  promote.py  session.py
src/ctmkit/deploy/: __init__.py  ordered.py
src/ctmkit/docs/: __init__.py  clean.py  crawl.py  crawl_sources.yaml  index.py  mirror.py  refresh.py  sources.yaml
src/ctmkit/events/: __init__.py  models.py  render.py
src/ctmkit/kpi/: __init__.py  emit.py  models.py
src/ctmkit/mcp/: __init__.py  server.py  tools.py
src/ctmkit/policy/: __init__.py  blackout.py  health.py
src/ctmkit/promote/: __init__.py  promoter.py
src/ctmkit/sitestd/: __init__.py  engine.py  render.py  report.py  rules.py  standards.py
tests/: test_clean.py  test_cli.py  test_config.py  test_crawl.py  test_mirror.py  test_naming.py  test_schema.py  test_validate.py
tests/aapi/: test_services.py  test_session.py
tests/approval/: test_policy.py  test_registry.py
tests/cli/: test_approval.py  test_audit.py  test_cli.py  test_deploy.py  test_docs.py  test_session_build.py
tests/deploy/: test_ordered.py
tests/docs/: test_index.py  test_refresh.py
tests/events/: test_events.py
tests/fixtures/: site-standard.yaml
tests/fixtures/schemas/: calendar.schema.json
tests/kpi/: test_kpi.py
tests/mcp/: test_server.py  test_tools.py
tests/policy/: test_blackout.py  test_health.py
tests/promote/: test_promoter.py
tests/sitestd/: test_engine.py  test_render.py  test_rules.py
