[project]
name = "ctmkit"
version = "0.0.1"
description = "Control-M library + CLI: Jobs-as-Code GitOps, deploy descriptors, site standards, docs mirror, MCP door"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl_cffi>=0.7",
    "markdownify>=0.13",
    "pyyaml>=6",
    "jsonschema>=4.21",
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
ctmkit = "ctmkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctmkit"]

[dependency-groups]
dev = ["pytest>=8"]
