[project]
name = "ctmkit"
version = "0.0.1"
description = "Control-M library + CLI: Jobs-as-Code GitOps, deploy descriptors, site standards, docs mirror, MCP door"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6",
    "jsonschema>=4.21",
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "mcp>=1.0",
    "curl_cffi>=0.7",
    "markdownify>=0.13",
]

[project.scripts]
ctmkit = "ctmkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctmkit"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # typer.Option()/Argument() in defaults is the idiomatic pattern

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

